update my portfolio

--- a/index.html
+++ b/index.html
@@ -4,34 +4,45 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
+    <title>Shane's Space</title>
+    <link rel="stylesheet" type="text/css" 
+href="css/styles.css">
 </head>
-
 <body>
-    <H1>
-        My Portfolio
-    </H1>
-    <!-- 
-      Directions:
-        1. Create a DIV element to contain the page content
-        2. Inside your DIV, create an H1 tag that contains your name as the text
-        3. Below your H1 tag, create an H2 tag that contains the content text "Software Developer"
-        4. Below your H2 tag, create an HR tag which will make a horizontal line
-        5. Create a paragraph tag and put a sentence of your choice in it. (Suggestion: "My favorite thing about programming is _______")
-        6. Make the word "favorite" italicized
-        7. Make an image tag with the src attribute linked to a picture of yourself or of a placeholder image. Make sure you make an alt attribute too!
-        8. Create an H3 tag that says "About Me"
-        9. Create a paragraph tag that contains the "lorem ipsum" text. You will need to do a search for this text - it is long!
-        10. Create an H3 tag that says "My Projects"
-        11. Create an unordered list with 3 list items that say "Project 1", "Project 2", and "Project 3"
-        12. Add another H3 that contains "Contact Me" as text
-        13. Create a paragraph that contains a fake phone number, e.g., "Phone: (202) 555-1234"
-        14. Create a link tag (<a>) with a direction to mail to a fake email address. This is done by making a regular link, but in the href attribute, put mailto:fake@email.com (this opens up your email program with the TO field already filled out-try it!)
+    <div>
+         <h1><em>Shane Morrison</em></h1>
+         <h2>Software Developer</h2>
+         <hr>
+         <p>My <em>favorite</em> thing about programming is seeing what I create become real.</p>
+         <h3>About Me</h3>
+         <div class="frame">
+         <img 
+         src="https://gratefuldead-music.com/sites/default/files/styles/medium/public/gd%20bear_0.jpg?itok=GvyhjG2C"
+         alt= "Dancing Tiedyed Bear">
+         </div>
+    <div class="container">
+    <div class="box-1">
+         <p>I'm baby mollit cray flannel, jianbing heirloom la croix church-key intelligentsia dolore flexitarian officia raclette 
+              cronut mumblecore. Authentic cliche health goth, echo park dolore mustache tumeric snackwave edison bulb prism sustainable.
+               Meh VHS butcher lorem. Kitsch pickled kale chips live-edge pinterest everyday carry aliquip. Waistcoat schlitz green juice 
+               semiotics asymmetrical church-key mixtape mustache tacos normcore thundercats health goth portland af. Pabst dolore dolor 
+               gochujang chicharrones franzen reprehenderit. Freegan wolf consectetur, affogato tumblr skateboard disrupt photo booth.</p>
+    </div>
+    </div>
+    <div class="box-2">
+         <h3>My Projects</h3>
+         <ul>
+              <li>Project 1</li>
+              <li>Project 2</li>
+              <li>Project 3</li>
+         </ul>
+    </div>
+         <h3>Contact Me</h3>     
+         <p><strong>Phone: 444.444.4443</strong></p>
+         <p><em>Email:</em> <a href="vbbehr@email.com">vbbehr@email.com</a></p>
+    </div>
 
-        BONUS: Try one of the following ideas if you finish early
-          - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
-          - In your contact me section, make the text "Phone:" and "Email:" bolded
-     -->
+ 
+  
 </body>
-
 </html>
